[tool.poetry]
name = "credits-kata"
version = "0.1.0"
description = ""
authors = ["yellowBunny <zigggin3@gmail.com>"]
readme = "README.md"
packages = [{include = "credits_kata"}]

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
